--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     margin: 0;
+    font-size: clamp(0.9rem, 0.45rem + 1vw, 1rem);
 }
 
 .main {
@@ -63,7 +64,6 @@ picture img {
 .perfume {
     text-transform: uppercase;
     letter-spacing: 0.3em;
-    font-size: 14px;
     font-weight: 350;
 }
 
