--- a/index.css
+++ b/index.css
@@ -24,12 +24,12 @@ body {
     background-color: white;
     margin: 1rem;
     border-radius: 15px;
-    overflow: hidden;
 }
 
 picture img {
     width: 100%;
     height: 100%;
+    border-radius: 15px;
   }
 
 
@@ -38,23 +38,6 @@ picture img {
     flex-direction: column;
     gap: 1rem;
     padding: 1rem;
-}
-
-@media (min-width: 48em) {
-    .main {
-        flex-direction: row;
-        justify-content: space-between;
-        max-width: 600px;
-        height: auto;
-    }
-    picture {
-        flex: 1 1 0%;
-    }
-    
-    .section {
-        flex: 1 1 0%;
-        gap: 2rem;
-    }
 }
 
 .perfume, .description {
@@ -98,6 +81,7 @@ picture img {
     border-radius: 10px;
     padding: 10px 20px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .cart:hover {
@@ -106,4 +90,22 @@ picture img {
 
 .cart:active {
     transform: scale(0.95);
+}
+
+/* Media Queries Section */
+@media (min-width: 48em) {
+    .main {
+        flex-direction: row;
+        justify-content: space-between;
+        max-width: 600px;
+        height: auto;
+    }
+    picture {
+        flex: 1 1 0%;
+    }
+    
+    .section {
+        flex: 1 1 0%;
+        gap: 2rem;
+    }
 }
